# tftm-alien-invasion

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  GNUmakefile  Makefile  README.md  alien_invasion.py  mechanics.md  pyproject.toml
alien_invasion/: __init__.py  __main__.py  constants.py  settings.py
alien_invasion/entities/: __init__.py
alien_invasion/entities/alien/: __init__.py  alien.py
alien_invasion/entities/bullet/: __init__.py  bullet.py
alien_invasion/entities/common/: meta_alien.py  meta_emitter.py
alien_invasion/entities/items/: item.py
alien_invasion/entities/starship/: __init__.py  constants.py  starship.py  transmission.py  types.py
alien_invasion/entities/util/: __init__.py  spawner.py
alien_invasion/resources/images/: player_60x48.png~  player_60x48_2.png~
alien_invasion/resources/music/: kallichore.opus  main_menu.opus  menu_button_press.opus  tape_in.opus
alien_invasion/resources/starship/: starship.toml
alien_invasion/utils/animations/: __init__.py  sprite_timed.py
alien_invasion/utils/crt_filters/: __init__.py  default.py
alien_invasion/utils/loaders/: __init__.py  item.py
alien_invasion/views/: __init__.py  main_menu.py
alien_invasion/views/invasion/: __init__.py  invasion.py
alien_invasion/views/loading_screen/: __init__.py  loading_screen.py  loading_screen_base.py
alien_invasion/views/main_menu/: main_menu.py
alien_invasion/views/mission/: mission.py
configs/: config.json
configs/saves/: 01876850-5815-4ff1-ad2c-f75fb3bb0e14.json
data/aliens/ancient_fort_remnant/: ancient_fort_remnant.toml
data/aliens/castle_wall_sontra/: castle_wall_sontra.toml
data/aliens/castle_wall_sontra.skip/: sontra.toml
data/aliens/dummy_ufo/: dummy_ufo.toml
data/aliens/hollow_copy/: hollow_copy.toml
data/aliens/imperfect_copy/: imperfect_copy.toml
data/bosses/castle_keep/: entity.toml
data/levels/: 1.toml
data/levels/0_demo/: level.toml
data/levels/1/: level.toml
data/levels/1_test_flight/: level.toml
data/levels/1_test_flight_2.ignore/: level.toml
data/levels/2/: README.md  level.toml
data/levels/2_into_the_light/: level.toml
data/levels/3/: level.toml
data/levels/3_looming_flight_arcade/: level.toml
data/starship/engine/: spiralling_reactor.json  (+1 more)
docs/: prev_1280.png.kra
experiments/: particles_demo.py  state_manager.py
tools/shipyard_cli_item_creator/: README.md
(+105 files in other folders)
