[tool.poetry]
name = "alien-invasion"
version = "0.1.1"
description = "Alien Invasion is an unfiction classic space invaders-like arcade shmup written on python 3."
authors = ["Kostya Orlik <kostya.orlik@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.15"
toml = "^0.10.2"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
