[tool.poetry]
name = "alien-invasion"
version = "0.1.1"
description = "Alien Invasion is an unfiction classic space invaders-like arcade shmup written on python 3."
authors = ["Kostya Orlik <kostya.orlik@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.15"
toml = "^0.10.2"
pydantic = "^1.10.2"
pyogg = "^0.6.14a1"
nuitka = "^1.5.6"
ordered-set = "^4.1.0"
bulletml = { path = "./alien_invasion/utils/bulletml", develop = false }

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
ruff = "^0.0.265"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
